[build-system]
requires = ["setuptools>=59.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lunarcrush"
version = "2.0.1"
authors = [
  { name="saizk", email="sergioaizcorbe@hotmail.com" },
]
description = "Unofficial LunarCrush API v2 Wrapper for Python."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/saizk/LunarCrushAPI"
"Bug Tracker" = "https://github.com/saizk/LunarCrushAPI/issues"